fixed text alignment

--- a/src/components/pages/newtransaction.css
+++ b/src/components/pages/newtransaction.css
@@ -28,4 +28,5 @@
     margin: 10px auto;
     padding: 8px;
     gap: 10px;
+    text-align: left;
 }
